--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <title>Piedra, papel, tijera</title>
 </head>
 <body>
-  <button class="boton-jugada" data-jugada="piedra">Piedra</button>
-  <button class="boton-jugada" data-jugada="papel">Papel</button>
-  <button class="boton-jugada" data-jugada="tijera">Tijera</button>
+  <div id="botones">
+    <button class="boton-jugada" data-jugada="piedra">Piedra</button>
+    <button class="boton-jugada" data-jugada="papel">Papel</button>
+    <button class="boton-jugada" data-jugada="tijera">Tijera</button>
+  </div>
   <div id="resultados"></div>
   <p id="contador-usuario">Tus puntos: 0</p>
   <p id="contador-ordenador">Puntos de la máquina: 0</p>
-  <script src="./js/script.js"></script>
+  <script src="./js/script-v2.js"></script>
 </body>
 </html>
